2007-05-03  Sancho Lerena  <slerena@artica.es>

	* bin/pandora_network.pl: Fix problem with ICMP timeouts.
	
	* util/pandora_dbstress.pl: Update for new needsupdate fix in some
	DB code. Needs to be improved for specific module/agent selection.
	

2007-04-24  Sancho Lerena  <slerena@artica.es>

	* pandora_db.pm: Added sanity checks to avoid problems when some
	modules coming without names or cannot locate a valid agent.

	* pandora_server.pl: Added sanity checks to avoid unnamed modules

2007-04-21  Sancho Lerena  <slerena@gmail.com>

	* pandora_tools.pm: Fixed sqlWrap() function.

	* pandora_db.pm: Many changes and fixes: data_inc process function
	almost rewritten to fix a bug coming from 1.x? who causes to
	insert as data the total value for first data arriving... so bad
	:(. This is now fixed. crea_agente_modulo() now return id of
	agent_module created so we skip another timeconsuming query
	:). Added give_group_disabled() for next feature about Group
	Disabled doesnt fire alerts nor events. Fixed crea_agente_modulo()
	with many not defined checks.

	* pandora_network.pm: Fixed terrible bug in reference parameters
	that cause pandora_query_tcp() dont work properly.

2007-04-19  Sancho Lerena  <slerena@artica.es>

	* pandora_tools.pm: Now expor sqlWrap() function to parse " and '
	chars in some SQL sentences. Use with careful.

	* pandora_network.pm: Fixed little bug with undeclared variable
	warning.

	* pandora_db.pm: Implemented NEW text alerts with regexp. Internal
	audit now uses macros for alerts. Fixed a bug in
	crea_agente_modulo() when uses ' chars in name or module
	description (using sqlWrap to clean text). General code cleanup.
	
2007-04-19  Manuel Arostegui <marostegui@artica.es>

	* specs/fedoracore5/pandora_server: Added files of the
	  new 1.3 version.

2007-04-17  Manuel Arostegui <marostegui@artica.es>

	* specs/fedoracore5/pandora_server.spec: Added code to evaluate
	  the perl version using by the system.
